--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
   "name": "virtualized-select",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.0.0",
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "release": "standard-version",
+    "pub": "npm run build:lib && npm run release && npm publish && git push --follow-tags origin master"
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "element-ui": "^2.15.13",
+    "standard-version": "^9.5.0",
+    "vue": "^2.6.14",
+    "vxe-table": "^3.6.13",
+    "xe-utils": "^3.5.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
